Improved SEO/Accessibility by increasing touch zones Added dummy footer (fixed position for now) Improved color contrast between theme modes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
+/* #__next {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+} */
 @tailwind components;
 @tailwind utilities;
